# kserve_ml_deployment

./: .gitignore  Makefile  README.md  justfile  k8s-deploy.sh  run_all.sh  run_all_k8s.sh  run_all_local.sh
.github/workflows/: ci.yml
docs/: GPU_KERNEL_OPTIMIZATIONS_RESEARCH.md  Understanding_vLLM_llm-d_and_KServe_in_LLM_Inference.md
docs/llm-inference/: 01-overview.md  02-vllm-deep-dive.md  03-llm-d-architecture.md  04-kserve-integration.md  05-architecture-patterns.md  README.md  (+2 more)
services/: spec.md
services/backend/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  env.example  pyproject.toml  start-dev-real.sh  start-dev.sh  test_full_integration.sh
services/backend/aiq_circular_detection/: dependencies.py  main.py  model_client.py
services/backend/aiq_circular_detection/db/: __init__.py  database.py
services/backend/aiq_circular_detection/models/: __init__.py  db.py
services/backend/aiq_circular_detection/repositories/: __init__.py  image.py  object_db.py
services/backend/aiq_circular_detection/schemas/: __init__.py  detection.py  image.py  object.py
services/backend/aiq_circular_detection/storage/: __init__.py  base.py  local.py
services/backend/config/: README.md  __init__.py  settings.py
services/backend/tests/: test_config.py  test_db.py  test_db_integration.py  test_image_db_repository.py  test_image_repository.py  test_list_objects.py  test_model_client.py  test_models.py  test_object_db_repository.py  test_object_detail.py  test_schemas.py  test_smoke.py  test_storage.py  test_upload.py  test_upload_end_to_end.py
(+44 files in other folders)
